--- a/ScottsExamples/TestStuff/BlankActivity36/app/src/main/res/values/strings.xml
+++ b/ScottsExamples/TestStuff/BlankActivity36/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="textview">Main Activity</string>
+    <string name="textview">Content Main</string>
 </resources>
