--- a/ScottsExamples/ManageFragmentsDynamicall/app/src/main/res/values/strings.xml
+++ b/ScottsExamples/ManageFragmentsDynamicall/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="button2">Fragment 2</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="fragment1">Hello, I am Fragment 1</string>
+    <string name="fragment2">Hello, I am Fragment 2</string>
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
