--- a/ScottsExamples/Layout_demos/WeightedChainDemo/app/src/main/res/values/strings.xml
+++ b/ScottsExamples/Layout_demos/WeightedChainDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Weighted Chain Demo</string>
+    <string name="btn1">Button 1</string>
+    <string name="btn2">Button 2</string>
+    <string name="btn3">Button 3</string>
+    <string name="btn4">Button 4</string>
+    <string name="btn5">Button 5</string>
+    <string name="btn6">Button 6</string>
+
+
+    <string name="img">Avatar</string>
 </resources>
