--- a/BookExamples/41_NavigationDemoV2/app/src/main/res/values/strings.xml
+++ b/BookExamples/41_NavigationDemoV2/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">NavigationDemo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="textview">TextView</string>
+    <string name="number">Some number</string>
 </resources>
