--- a/ScottsExamples/NavigationMultiFrags/app/src/main/res/values/strings.xml
+++ b/ScottsExamples/NavigationMultiFrags/app/src/main/res/values/strings.xml
@@ -1,16 +1,15 @@
 <resources>
-    <string name="app_name">MenuExample</string>
+    <string name="app_name">NavigationFrags</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
+    <string name="third_fragment_label">Third Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="red">Red</string>
-    <string name="green">Green</string>
-    <string name="yellow">Yellow</string>
-    <string name="blue">Blue</string>
+    <string name="hello_second_fragment">Hello second fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_third_fragment">Hello third fragment</string>
 </resources>
