--- a/BookExamples/47_TabLayoutDemoV2/app/src/main/res/values/strings.xml
+++ b/BookExamples/47_TabLayoutDemoV2/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 
     <string name="hello_first_fragment">Tab1 Fragment</string>
     <string name="hello_second_fragment">Tab2 Fragment</string>
+    <string name="hello_third_fragment">Tab 3 Fragment</string>
 </resources>
