--- a/BookExamples/56_SendBroadcast/app/src/main/res/values/strings.xml
+++ b/BookExamples/56_SendBroadcast/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SendBroadcast</string>
-    <string name="send_broadcast">Send Broadcast</string>
+    <string name="send_broadcast_1">Send Broadcast 1</string>
+    <string name="send_broadcast_2">Send Broadcast 2</string>
 </resources>
