--- a/ScottsExamples/AsyncTaskSeperateClass/app/src/main/res/values/strings.xml
+++ b/ScottsExamples/AsyncTaskSeperateClass/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">AsyncTaskSeparateClass</string>
-    <string name="press_me">Press Me</string>
+    <string name="async">Do Async Task</string>
+    <string name="count">Increment Number</string>
+    <string name="helloworld">Hello World</string>
+    <string name="number">0</string>
 </resources>
