--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/values/strings.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/values/strings.xml
@@ -19,5 +19,9 @@
    <string name="txtView" >Hello Class</string>
     <string name="btn1">Button 1</string>
 
+    <string name="chainBtn1">ChBtn1</string>
+    <string name="chainBtn2">ChBtn2</string>
+    <string name="chainBtn3">ChBtn3</string>
+
 
 </resources>
