--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/values/strings.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="chainBtn3">ChBtn3</string>
 
 
+    <string name="sampTextView">Hello Class</string>
+    <string name="sampBtn">Button 1</string>
+
+
 </resources>
