--- a/scotts_kotlin_examples/DolphinTest/app/src/main/res/values/strings.xml
+++ b/scotts_kotlin_examples/DolphinTest/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Dolphin Test</string>
-    <string name="mainfragment">MainFragment</string>
+    <string name="mainfragment">0.0</string>
     <string name="convert">Convert</string>
+    <string name="hint">Enter a currency value</string>
 </resources>
