--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/values/strings.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">layout_examples</string>
     <string name="instructions">Here I have created some examples of layouts.  Go to the layout folder res>layout and select the layout example you want to see.</string>
 
+    <string name="imageDescription">Image of person</string>
+
     <string name="button1">Button 1</string>
     <string name="button2">Button 2</string>
     <string name="button3">Button 3</string>
